@@ -61,7 +61,7 @@ import java.util.Set;
  *
  * @library /test/lib
  *
- * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_test.*.in
+ * @run main/othervm/timeout=300 RmiBootstrapTest .*_test.*.in
  * */
 
 /*
@@ -72,7 +72,7 @@ import java.util.Set;
  *
  * @library /test/lib
  *
- * @run main/othervm/timeout=300 -Djava.security.manager=allow RmiBootstrapTest .*_ssltest.*.in
+ * @run main/othervm/timeout=300 RmiBootstrapTest .*_ssltest.*.in
  * */
 
 /**
